# dacom

./: Cargo.toml  Print to stdout  README.md
src/: analyze.rs  args.rs  collect.rs  date.rs  lib.rs  main.rs  report.rs  stat.rs
src/tests/: mod.rs
src/tests/collect/: collect_date_error.rs  date_list.rs  date_set.rs  file_date_list.rs  file_date_set.rs  mod.rs
src/tests/date/: date.rs  mod.rs  month.rs
src/tests/stat/: mod.rs
