[package]
name        = "dacom"
description = "Date compilation tool which searches for dates within files and runs statistics on the data."
authors     = ["Sinisig"]
version     = "0.4.2+alpha"
edition     = "2021"

[dependencies]
lazy_static = "1.4.0"
sorted-vec  = "0.8.2"
memmap2     = "0.5.8"
regex       = "1.7.0"
clap        = { version = "4.0.32", features = ["derive"] }

